new proj/src/objects/GE_PRM_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>GE_PRM_Compliance_flag__c</fullName>
        <formula>IF(
OR(AND(
NOT(ISPICKVAL(GE_PRM_KYC_Actns__c,&apos;KYC Accepted&apos;)),
NOT(ISPICKVAL(GE_PRM_Branch_Location__c,&apos;KYC Accepted&apos;)),
NOT(ISPICKVAL(GE_PRM_Sub_Dealers__c,&apos;KYC Accepted&apos;)),
NOT(ISPICKVAL(GE_PRM_High_Risk__c,&apos;KYC Accepted&apos;))
),ISBLANK(GE_PRM_Regional_Compliance_Manager__c)),&apos;&apos;, IF(
      AND(OR(ISPICKVAL(GE_PRM_KYC_Actns__c,&apos;KYC Accepted&apos;),
          ISPICKVAL(GE_PRM_KYC_Actns__c,&apos;&apos;)),
          OR(ISPICKVAL(GE_PRM_Branch_Location__c,&apos;KYC Accepted&apos;),
          ISPICKVAL(GE_PRM_Branch_Location__c,&apos;&apos;)),
          OR(ISPICKVAL(GE_PRM_Sub_Dealers__c,&apos;KYC Accepted&apos;),
          ISPICKVAL(GE_PRM_Sub_Dealers__c,&apos;&apos;)),
          OR(ISPICKVAL(GE_PRM_High_Risk__c,&apos;KYC Accepted&apos;),
          ISPICKVAL(GE_PRM_High_Risk__c,&apos;&apos;)),
          OR(ISPICKVAL(GE_PRM_Compliance_Status__c,&apos;Compliance Accepted&apos;),
          ISPICKVAL(GE_PRM_Compliance_Status__c,&apos;Compliance Rejected&apos;))),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Conflict_b_w_GE_and_Position_Yes__c</fullName>
        <description>If &quot;Yes&quot; please explain conflict(s).</description>
        <inlineHelpText>If &quot;Yes&quot; please explain conflict(s).</inlineHelpText>
        <label>Conflict b/w GE and Position-Yes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Conflict_b_w_GE_and_Position__c</fullName>
        <description>If &quot;Yes&quot;, do you believe that any conflict of interest exists between this position and your proposed work for GE?</description>
        <inlineHelpText>If &quot;Yes&quot;, do you believe that any conflict of interest exists between this position and your proposed work for GE?</inlineHelpText>
        <label>Conflict b/w GE and Proposed Work</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Conflict_of_Interest_GE_Ofc_Yes__c</fullName>
        <description>If &quot;Yes&quot; please explain conflict(s).</description>
        <inlineHelpText>If &quot;Yes&quot; please explain conflict(s).</inlineHelpText>
        <label>Conflict of Interest b/w GE &amp; Office-Yes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Conflict_of_Interest_GE_Office__c</fullName>
        <description>Do you believe that any conflict of interest exists between this company and your proposed work for GE?</description>
        <inlineHelpText>Do you believe that any conflict of interest exists between this company and your proposed work for GE?</inlineHelpText>
        <label>Conflict of Interest b/w GE and Office</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contact_Page__c</fullName>
        <label>Contact Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contracts_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country_New__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country_Score__c</fullName>
        <label>Country Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country__c</fullName>
        <description>Country/State</description>
        <inlineHelpText>Country/State</inlineHelpText>
        <label>Country/State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country_of_company_founded__c</fullName>
        <description>Country in Which Company Founded</description>
        <inlineHelpText>Country in Which Company Founded</inlineHelpText>
        <label>Country in Which Company Founded</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Cust_Requested_Bribe_Yes__c</fullName>
        <description>If &quot;Yes&quot;, explain customer kickback.</description>
        <inlineHelpText>If &quot;Yes&quot;, explain customer kickback.</inlineHelpText>
        <label>Cust. Requested Bribe - Yes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Cust_Requested_Bribe__c</fullName>
        <description>Have any of your customers requested a bribe or kickback for doing business with you?</description>
        <inlineHelpText>Have any of your customers requested a bribe or kickback for doing business with you?</inlineHelpText>
        <label>Cust. Requested Bribe</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Customer_Types_served__c</fullName>
        <description>List the types of customers your company serves (e.g., User, OEM, Contractor, etc.)</description>
        <inlineHelpText>List the types of customers your company serves (e.g., User, OEM, Contractor, etc.)</inlineHelpText>
        <label>Customer Types served</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_DOA_Approved_Date__c</fullName>
        <label>DOA Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_DOA_Country__c</fullName>
        <inlineHelpText>Select country to drive the DOA geenration</inlineHelpText>
        <label>DOA Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_DOA_Generated_Date__c</fullName>
        <label>DOA Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_DOA_Region__c</fullName>
        <label>DOA Region</label>
        <picklist>
            <controllingField>GE_PRM_DOA_Country__c</controllingField>
            <picklistValues>
                <fullName>US North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_D_B_Number_if_available__c</fullName>
        <description>D&amp;B D-U-N-S Number</description>
        <inlineHelpText>D&amp;B D-U-N-S Number</inlineHelpText>
        <label>D&amp;B D-U-N-S Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Date_Business_Entity_Founded__c</fullName>
        <description>Date Company Founded</description>
        <inlineHelpText>Date Company Founded</inlineHelpText>
        <label>Date of company founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Date_and_Place_Entity_Founded__c</fullName>
        <description>Country in which Company Founded</description>
        <inlineHelpText>Country in Which Company Founded</inlineHelpText>
        <label>Country of company founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Days_After_Application_Launched__c</fullName>
        <formula>NOW()  -  GE_PRM_Application_Launched_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days After Application Launched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Default_Currency__c</fullName>
        <description>Default Currency for Transactions</description>
        <inlineHelpText>Default Currency for Transactions</inlineHelpText>
        <label>Default Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED - UAE Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL - Albanian Lek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS - Argentine Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD - Australian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT - Bangladesh Taka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL - Brazilian Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD - Canadian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF - Swiss Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP - Chilean Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY - Chinese Yuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP -  Colombian Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK - Czech Koruna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK - Danish Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD - Algerian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGP - Egyptian Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR -  Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP - British Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD - Hong Kong Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF - Hungarian Forint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDR - Indonesian Rupiah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS - Israeli Shekel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR - Indian Rupee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IQD -  Iraqi Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRR - Iranian Rial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK -  Iceland Krona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY - Japanese Yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW - Korean Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KWD -  Kuwaiti Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD - Moroccan Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN -  Mexican Peso</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Direct_Sales_Ppl_Supporting_Prod__c</fullName>
        <description>How many Direct Sales people do we have supporting this Product in this country?</description>
        <inlineHelpText>How many Direct Sales people do we have supporting this Product in this country?</inlineHelpText>
        <label>Direct Sales People Supporting Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Due_Deligence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Due_Diligence_Completion__c</fullName>
        <label>Due Diligence Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Edit_Risk__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(GE_PRM_Status__c,&apos;Approved&apos;)),NOT(ISPICKVAL(GE_PRM_Status__c,&apos;Archived&apos;))),IF( CONTAINS($Api.Enterprise_Server_URL_260,&quot;communities&quot;), HYPERLINK(&quot;/channelpartner/&quot;+Id+&quot;/e?retURL=%2F&quot;+Id+&quot;&amp;RecordType=012K00000000deQ&quot;, IMAGE(&apos;/resource/1393276881000/Edit_AFA&apos;,&quot;Click to Edit&quot;),&quot;_parent&quot;),HYPERLINK(&quot;/&quot;+Id+&quot;/e?retURL=%2F&quot;+Id+&quot;&amp;RecordType=012K00000000deQ&quot;, IMAGE(&apos;/resource/1389644712000/Edit_AFA&apos;,&quot;Click to Edit&quot;),&quot;_parent&quot;)),IMAGE(&apos;/resource/1393276881000/Edit_AFA&apos;,&quot;Master Edit Feezed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;ex&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Enter_selling_GE__c</fullName>
        <inlineHelpText>Enter the Name, Title, and Country for all Sales People selling GE Products/Services</inlineHelpText>
        <label>Enter sales people selling GE</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_FRAN_in_Govt_Positions__c</fullName>
        <description>Has any owner, officer, director, employee, consultant or close relative of these parties served in any government position or capacity, either now or within the past 5 years?</description>
        <inlineHelpText>Has any owner, officer, director, employee, consultant or close relative of these parties served in any government position or capacity, either now or within the past 5 years?</inlineHelpText>
        <label>Officers or Relatives in Govt Postions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Finances_Page__c</fullName>
        <label>Finances Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Financial_References_Page__c</fullName>
        <label>Financial References Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_General_References_Page__c</fullName>
        <label>General References Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Generate_afa_DOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To display whether DOA is generated or not.</description>
        <label>Generate DOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Gifts_to_Customers_Yes__c</fullName>
        <description>If yes, please explain customer monies.</description>
        <inlineHelpText>If &quot;Yes&quot;, please explain customer monies.</inlineHelpText>
        <label>Gifts to Customers - Yes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Gifts_to_Customers__c</fullName>
        <description>Have you ever provided gifts or money to customers in order to win a bid?</description>
        <inlineHelpText>Have you ever provided gifts or money to customers in order to win a bid?</inlineHelpText>
        <label>Gifts to Customers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Gifts_to_Government_Officials_Yes__c</fullName>
        <description>If yes, please explain.</description>
        <inlineHelpText>If &quot;Yes&quot;, please explain.</inlineHelpText>
        <label>Gifts to Government Officials - Yes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Gifts_to_Government_Officials__c</fullName>
        <description>Have you ever made payments to government officials either directly or indirectly (gifts, travel, entertainment, contributions)?</description>
        <inlineHelpText>Have you ever made payments to government officials either directly or indirectly (gifts, travel, entertainment, contributions)?</inlineHelpText>
        <label>Gifts to Government Officials</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Govt_or_Pol_Party_Positions_Yes__c</fullName>
        <description>If &quot;Yes&quot; please explain positions.</description>
        <inlineHelpText>If &quot;Yes&quot; please explain positions.</inlineHelpText>
        <label>If yes?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Govt_or_Political_Party_Positions__c</fullName>
        <description>Do any of the people listed above currently hold any position with any governmental entity, political party or campaign, or does the company contribute to any political party?</description>
        <inlineHelpText>Do any of the people listed above currently hold any position with any governmental entity, political party or campaign, or does the company contribute to any political party?</inlineHelpText>
        <label>Currently serving with gov’t entity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Have_any_Branch_Office_Locations__c</fullName>
        <description>To check whether the Branch Office is added or not.</description>
        <label>Have any Branch Office Locations?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Have_any_Subsidiaries__c</fullName>
        <label>Have any Subsidiaries ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_High_Risk_Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_High_Risk__c</fullName>
        <label>High Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Due Diligence Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_History_With_GE__c</fullName>
        <description>History with GE</description>
        <inlineHelpText>History with GE</inlineHelpText>
        <label>History with GE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_ITP_Appointing_Justification__c</fullName>
        <description>Describe the overall justification for appointing this ITP</description>
        <inlineHelpText>Describe the overall justification for appointing this ITP</inlineHelpText>
        <label>ITP Appointing Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_ITP_DR_RSL_VAR_Agreed_Paymt_Terms__c</fullName>
        <description>If this ITP is a DR/RSL/VAR, what are the agreed to Payment Terms?</description>
        <inlineHelpText>If this ITP is a DR/RSL/VAR, what are the agreed to Payment Terms?</inlineHelpText>
        <label>ITP DR/RSL/VAR Agreed Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_ITP_DR_RSL_VAR_Paymt_Terms_Other__c</fullName>
        <description>Please Explain</description>
        <inlineHelpText>Please Explain</inlineHelpText>
        <label>ITP DR/RSL/VAR Payment Terms - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_ITP_Key_Cutomers__c</fullName>
        <description>Please list all key customers that this ITP currently works with</description>
        <inlineHelpText>Please list all key customers that this ITP currently works with</inlineHelpText>
        <label>ITP Key Customers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_ITP_Key_Strength__c</fullName>
        <description>What is this ITP&apos;s key strength?</description>
        <inlineHelpText>What is this ITP&apos;s key strength?</inlineHelpText>
        <label>ITP&apos;s Key Strength</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_ITP_Other_Info__c</fullName>
        <description>Please describe any other relevant info regarding this ITP</description>
        <inlineHelpText>Please describe any other relevant info regarding this ITP</inlineHelpText>
        <label>ITP Other Info</label>
        <type>TextArea</type>
    </fields>
</CustomObject>